<resources>
    <string name="app_name">Money Manager</string>

    <string name="title_dashboard_section">Dashboard</string>
    <string name="title_account_section">Accounts</string>
    <string name="title_month_section">Expenses By Month</string>
    <string name="title_section3">Expenses By Year</string>
    <string name="title_section4">Pro Features</string>
    <string name="title_section5">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_new_expense">Add Expense</string>
    <string name="action_edit_expense">Edit Expense</string>
    <string name="action_daily_expenses">Daily Expenses</string>
    <string name="action_new_account">Add Account</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_new">New Item</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_new_expense">Edit Expense</string>
    <string name="title_activity_daily_expense">Daily Expenses</string>
    <string name="title_activity_monthly_expense">Monthly Expenses</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>


    <string name="image_content_desc_down_arrow">Down Arrow Icon</string>
    <string name="image_content_desc_up_arrow">Up Arrow Icon</string>
    <string name="image_content_desc_expense_icon">Expense Icon</string>
    <string name="image_content_desc_category_icon">Category Icon</string>

    <string-array name="drawer_list">
        <item>Dashboard</item>
        <item>Accounts</item>
        <item>Daily Expenses</item>
        <item>Expenses By Month</item>
        <item>Bill Reminders</item>
        <item>Budget Savings</item>
        <item>Pro Features</item>
        <item>Settings</item>
    </string-array>

    <string name="settings_dashboard">Dashboard</string>
    <string name="settings_target">Target Amount</string>
    <string name="settings_target_summary">Input the target amount for your balance</string>
    <string name="settings_target_key">TARGET</string>
    <string name="settings_income">Estimated Monthly Income Amount</string>
    <string name="settings_income_summary">Input your estimated monthly income to calculate target</string>
    <string name="settings_income_key">INCOME</string>

    <string name="edit_expense_description_label">Description (Optional)</string>
    <string name="edit_expense_category_label">Category</string>
    <string name="edit_expense_amount_label">Amount</string>
    <string name="edit_expense_date_hint">Format: mm/dd/yyyy</string>
    <string name="edit_amount_hint">0.00</string>
    <string name="edit_expense_save_expense_button">Save Expense</string>
    <string name="edit_expense_date_label">Date</string>
    <string name="edit_expense_title_label">Title</string>
    <string name="edit_expense_content_desc_calendar_icon">Calendar Icon</string>

    <string name="edit_account_name_label">Name</string>
    <string name="edit_account_category_label">Category</string>
    <string name="edit_account_amount_label">Amount</string>
    <string name="edit_account_save_account_button">Save Account</string>

    <string name="edit_reminder_name_label">Name</string>
    <string name="edit_reminder_start_date_label">Alert Date (Repeting Each Month)</string>
    <string name="edit_reminder_end_date_label">End Alert Date (Optional)</string>

    <string name="footer_total_label">Total:</string>

    <string name="dashboard_check_ok_text">Check Between Accounts and Expenses: OK</string>
    <string name="dashboard_months_to_target_placement">Months\nto target:\n$100.00</string>
    <string name="dashboard_time_to_target_placement">0</string>
    <string name="dashboard_balance_label">Balance</string>

    <string-array name="months_char">
        <item>J</item>
        <item>F</item>
        <item>M</item>
        <item>A</item>
        <item>M</item>
        <item>J</item>
        <item>J</item>
        <item>A</item>
        <item>S</item>
        <item>O</item>
        <item>N</item>
        <item>D</item>
    </string-array>

    <string-array name="months_3char">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>

    <!-- Notification Strings -->
    <string name="notification_id">MONEY_NOTIFICATION</string>
    <string name="notification_started">Starting Notification</string>
    <string name="notification_stopped">Ending Notification</string>
    <string name="notification_content">Remember to pay this bill today!</string>
</resources>
