<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@android:color/white"
                tools:context="com.macedo.moneymanager.ui.EditOperationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_reminder_name_label"
        android:id="@+id/titleLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:singleLine="true"
        android:maxLength="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_reminder_start_date_label"
        android:id="@+id/startDateLabel"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDateEditText"
            android:inputType="textMultiLine"
            android:layout_toLeftOf="@+id/startDateCalendarIcon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/edit_expense_date_hint"
            android:maxLength="10"
            android:singleLine="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDateCalendarIcon"
            android:src="@drawable/ic_calendar"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@+id/startDateEditText"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:scaleType="fitXY"
            android:contentDescription="@string/edit_expense_content_desc_calendar_icon"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_reminder_end_date_label"
        android:id="@+id/endDateLabel"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endDateEditText"
            android:inputType="textMultiLine"
            android:layout_toLeftOf="@+id/endDateCalendarIcon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/edit_expense_date_hint"
            android:maxLength="10"
            android:singleLine="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDateCalendarIcon"
            android:src="@drawable/ic_calendar"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_alignBottom="@+id/endDateEditText"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:scaleType="fitXY"
            android:contentDescription="@string/edit_expense_content_desc_calendar_icon"/>
    </RelativeLayout>

</LinearLayout>
